feat: 新增umi-request

--- a/packages/client/src/pages/Main/components/Search/index.less
+++ b/packages/client/src/pages/Main/components/Search/index.less
@@ -2,6 +2,11 @@
   display: flex;
   align-items: center;
   cursor: pointer;
+
+  span{
+    display: block;
+  }
+
   .nickName {
     flex: 1;
     margin-left: 10px;
