feat(custom): 我的设置头像上传

--- a/packages/client/src/pages/Main/components/Search/index.less
+++ b/packages/client/src/pages/Main/components/Search/index.less
@@ -2,8 +2,10 @@
   display: flex;
   align-items: center;
   cursor: pointer;
+  overflow: hidden;
+  white-space: nowrap;
 
-  span{
+  span {
     display: block;
   }
 
@@ -19,8 +21,8 @@
 
 .search {
   :global {
-    .ant-input-group-wrapper {
-      vertical-align: middle;
+    .ant-select-show-search {
+      width: 100%;
     }
   }
 }
