--- a/packages/client/src/pages/Main/index.less
+++ b/packages/client/src/pages/Main/index.less
@@ -1,7 +1,7 @@
 .main {
   width: 100vw;
   height: 100vh;
-  .backgroundImage{
+  .backgroundImage {
     width: 100vw;
     height: 100vh;
     position: absolute;
@@ -9,7 +9,6 @@
     z-index: 0;
     opacity: 1;
   }
-
 
   :global {
     .ant-layout {
@@ -35,9 +34,8 @@
       flex-direction: row;
 
       .content {
-        .musicContent{
-          padding: 36px;
-          padding-top: 12px;
+        .musicContent {
+          padding: 12px 24px;
         }
       }
     }
