--- a/packages/client/src/components/DetailPage/index.less
+++ b/packages/client/src/components/DetailPage/index.less
@@ -4,6 +4,9 @@
 }
 
 .detailPage {
+  width: 100%;
+  height: 100%;
+  overflow:auto;
   display: flex;
   flex-direction: column;
 
@@ -67,4 +70,14 @@
       }
     }
   }
+}
+
+
+
+.spinClass{
+  width: 100%;
+  height: 100%;
+  display: flex;  
+  align-items: center;
+  text-align: center;
 }
